--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,4 @@ graalHelperVersion=2.0.1
 enableGraalNative=false
 gdxTeaVMVersion=1.0.0-b9
 teaVMVersion=0.10.0-dev-5
-gdxVersion=1.12.1
+gdxVersion=1.12.2-SNAPSHOT
