cascaded shadow maps (broken)

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xms512M -Xmx1G
 org.gradle.configureondemand=false
 gdxControllersVersion=2.2.3
 controllerScene2DVersion=2.3.0
-gdxGltfVersion=2.1.0
+gdxGltfVersion=-SNAPSHOT
 controllerMappingVersion=2.3.0
 graalHelperVersion=2.0.1
 enableGraalNative=false
