--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,8 @@ configure(subprojects) {
 }
 
 subprojects {
-  version = '1.0.0'
-  ext.appName = 'CanyonRacer'
+  version = '1.0.3b'
+  ext.appName = 'Oz Racer'
   repositories {
     mavenCentral()
     maven { url 'https://s01.oss.sonatype.org' }
